# Langmore

./: .env.example  Cargo.toml  HELP.md  Jenkinsfile  Makefile  README.md  beaver_v2.drawio  build.gradle  flabber.drawio  settings.gradle  uber.drawio
.github/workflows/: build.yml
src/: main.rs
src/main/java/com/clivern/meth/: MethApplication.java
src/module/: command.rs  database.rs  mod.rs  writer.rs
src/test/java/com/clivern/meth/: MethApplicationTests.java
src/util/: environ.rs
static/: datafiles.drawio  keydir.drawio
