[package]
name = "dwal"
version = "0.1.2"
authors = ["Clivern <hello@clivern.com>"]
edition = "2018"
description = "A KV Store Based On Write-Ahead Log"
license = "MIT"
repository = "https://github.com/Clivern/Dwal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
rand = "0.8"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
