[package]
name = "langmore"
version = "0.3.0"
authors = ["Clivern <hello@clivern.com>"]
edition = "2018"
description = "A KV Store Based On Write-Ahead Log"
license = "MIT"
repository = "https://github.com/Clivern/Langmore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
rand = "0.8"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
